<resources>
    <string name="app_name">MobinNetApplication</string>
    <string name="password">گذر واژه</string>
    <string name="phone_number">تلفن همراه</string>
    <string name="entry">ورود</string>
    <string name="sign_up">ثبت نام کنید</string>
    <string name="repeat_pass">تکرار گذر واژه</string>
    <string name="name_family">نام و نام خانوادگی</string>
    <string name="filter">فیلتر</string>
    <string name="show_all">نمایش همه</string>
    <string name="home">خانه</string>
    <string name="cloudy_space">فضای ابری</string>
    <string name="cameras">دوربین ها</string>
    <string name="account">حساب کاربری</string>
    <string name="title">عنوان</string>
    <string name="hint_date">زمان ایجاد:۱۴۰۰/۰۲/۲۱  ۱۱:۲۰:۴۰.۵۸۷</string>
    <string name="explain">توضیحات</string>
    <string name="sort">چیدمان</string>
    <string name="alone">تکی</string>
    <string name="two_category">دو تایی</string>
    <string name="three_category">سه تایی</string>
    <string name="four_category">چهار تایی</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="test">فاطمه افشار</string>
    <string name="email">ایمیل</string>
    <string name="phone">موبایل</string>
    <string name="national_code">کد ملی</string>
    <string name="town">استان</string>
    <string name="city">محله</string>
    <string name="close">بستن</string>
    <string name="buy_and_add_camera">خرید بسته و اضافه کردن دوربین</string>
    <string name="camera">دوربین</string>
    <string name="search">جستجو</string>
    <string name="organize">سازمان</string>
</resources>