<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            style="@style/MainTextStyle.TitleStyle"
            android:id="@+id/title_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/name"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_name"
            app:layout_constraintEnd_toEndOf="@+id/tv_name"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/MainTextStyle.EditTextStyle"
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/test"
            app:layout_constraintBottom_toTopOf="@+id/title_national_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_name" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/MainTextStyle.TitleStyle"
            android:id="@+id/title_national_code"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/national_code"
            app:layout_constraintBottom_toTopOf="@+id/tv_national_code"
            app:layout_constraintEnd_toEndOf="@+id/tv_national_code"
            app:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/MainTextStyle.EditTextStyle"
            android:id="@+id/tv_national_code"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:text="@string/national_code"
            app:layout_constraintBottom_toTopOf="@id/title_town"
            app:layout_constraintTop_toBottomOf="@+id/title_national_code" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/MainTextStyle.TitleStyle"
            android:id="@+id/title_town"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/town"
            app:layout_constraintBottom_toTopOf="@+id/tv_town"
            app:layout_constraintEnd_toEndOf="@+id/tv_town"
            app:layout_constraintTop_toBottomOf="@+id/tv_national_code" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/MainTextStyle.EditTextStyle"
            android:id="@+id/tv_town"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:text="@string/town"
            app:layout_constraintBottom_toTopOf="@+id/title_city"
            app:layout_constraintTop_toBottomOf="@+id/title_town" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/MainTextStyle.TitleStyle"
            android:id="@+id/title_city"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/city"
            app:layout_constraintBottom_toTopOf="@+id/tv_city"
            app:layout_constraintEnd_toEndOf="@+id/tv_city"
            app:layout_constraintTop_toBottomOf="@+id/tv_town" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/MainTextStyle.EditTextStyle"
            android:id="@+id/tv_city"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:text="@string/city"
            app:layout_constraintBottom_toTopOf="@+id/title_organize"
            app:layout_constraintTop_toBottomOf="@+id/title_city" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/MainTextStyle.TitleStyle"
            android:id="@+id/title_organize"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/organize"
            app:layout_constraintBottom_toTopOf="@+id/tv_organize"
            app:layout_constraintEnd_toEndOf="@+id/tv_organize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_city" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/MainTextStyle.EditTextStyle"
            android:id="@+id/tv_organize"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:text="@string/organize"
            android:layout_marginBottom="16dp"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_organize"
            tools:layout_editor_absoluteX="16dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>