<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_smoke">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/mobinio"
            app:layout_constraintBottom_toTopOf="@id/guideline_top"
            app:layout_constraintEnd_toEndOf="@+id/imv_phone"
            app:layout_constraintStart_toStartOf="@+id/imv_phone" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv_phone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_phone"
            app:layout_constraintBottom_toTopOf="@+id/guideline_middle"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/guideline_top" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.40" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_name_family"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.CustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_border_borrom_top_rounded"
            android:hint="@string/name_family"
            android:layout_marginTop="16dp"
            app:endIconContentDescription="profile img"
            app:endIconDrawable="@drawable/ic_person"
            app:layout_constraintBottom_toTopOf="@+id/input_layout_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guideline_middle">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_phone"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.CustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            app:endIconContentDescription="phone img"
            app:endIconDrawable="@drawable/ic_mobile_phone"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_name_family">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layer_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.CustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@color/evening_sea"
            app:endIconContentDescription="key img"
            app:endIconDrawable="@drawable/ic_password"
            app:endIconMode="custom"
            app:endIconTint="@color/light_green"
            app:hintTextColor="@color/green_yellow"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_phone">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_repeat_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.CustomStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_bottom_border_shadow"
            android:hint="@string/repeat_pass"
            app:endIconContentDescription="key img"
            app:endIconDrawable="@drawable/ic_password"
            app:layout_constraintTop_toBottomOf="@+id/input_layer_password"
            tools:layout_editor_absoluteX="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            style="@style/BtnGradientGreenStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_backspace"
            android:paddingStart="24dp"
            android:text="@string/entry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_repeat_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>