<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:background="@drawable/bg_white_rounded_8">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:text="@string/sort"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_below="@+id/tv_text"
            android:background="@drawable/line"
            android:translationZ="999dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_text"
            tools:layout_editor_absoluteX="8dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".85" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_alone"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="0dp"
            android:layout_margin="8dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/view3"
            app:layout_constraintBottom_toTopOf="@id/btn_two_horizontal"
            android:src="@drawable/ic_alone" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_alone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:text="@string/alone"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_alone"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/btn_alone" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_two_horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_two_vertical"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btn_alone"
            android:src="@drawable/ic_two_part_big_horizontal" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_two_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:text="@string/two_category"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_two_horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/btn_two_horizontal" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_two_vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintBottom_toTopOf="@id/btn_three_top_two_part"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btn_two_horizontal"
            android:src="@drawable/ic_two_part_big_vertical" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_two_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:text="@string/two_category"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_two_vertical"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/btn_two_vertical" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_three_top_two_part"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintBottom_toTopOf="@+id/btn_three_bottom_two_part"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btn_two_vertical"
            android:src="@drawable/ic_three_part_big_bottom_part" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_three_top_two_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:text="@string/three_category"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_three_top_two_part"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/btn_three_top_two_part" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@id/btn_three_bottom_two_part"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btn_three_top_two_part"
            android:src="@drawable/ic_three_part_big_top_part" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_three_bottom_two_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:text="@string/three_category"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_three_bottom_two_part"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/btn_three_bottom_two_part" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toBottomOf="@+id/btn_three_bottom_two_part"
            android:src="@drawable/ic_category_gray" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:layout_margin="8dp"
            android:text="@string/four_category"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_four"
            app:layout_constraintEnd_toStartOf="@+id/guideline3"
            app:layout_constraintTop_toTopOf="@+id/btn_four" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>